syntax = "proto3";

package temporal.server.chasm.lib.tests.proto.v1;

option go_package = "go.temporal.io/server/chasm/lib/tests/gen/testspb;testspb";

import "google/protobuf/timestamp.proto";

message TestPayloadStore {
    int64 total_count = 1;
    int64 total_size = 2;
    // (-- api-linter: core::0142::time-field-type=disabled --)
    map<string, google.protobuf.Timestamp> expiration_times = 3;
    bool closed = 4;
}

message TestPayloadTTLPureTask {
    string payload_key = 1;
}

message TestPayloadTTLSideEffectTask {
    string payload_key = 1;
}

